修改了一些样式和路径

--- a/login.html
+++ b/login.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大事件-登陆/注册</title>
     <!-- 导入layui css 样式 -->
-    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="assets/lib/layui/css/layui.css" />
     <!-- 导入自己的 css 样式 -->
-    <link rel="stylesheet" href="/assets/css/login.css" />
+    <link rel="stylesheet" href="assets/css/login.css" />
 </head>
 
 <body>
     <!-- 头部的 logo 区域 -->
     <div class="layui-main logo-box">
-        <img src="/assets/images/logo.png" alt="" />
+        <img src="assets/images/logo.png" alt="" />
     </div>
 
     <!-- 登陆注册区域 -->
@@ -92,13 +92,13 @@
 
 
     <!-- 导入 jQuery 文件 -->
-    <script src="/assets/lib/jquery.js"></script>
+    <script src="assets/lib/jquery.js"></script>
     <!-- 导入 layui js文件 -->
-    <script src="/assets/lib/layui/layui.all.js"></script>
-   <!-- 导入自己封装的 baseAPI.js 文件 -->
-    <script src="/assets/js/baseAPI.js"></script>
-     <!-- 导入自己的 js 文件 -->
-    <script src="/assets/js/login.js"></script>
+    <script src="assets/lib/layui/layui.all.js"></script>
+    <!-- 导入自己封装的 baseAPI.js 文件 -->
+    <script src="assets/js/baseAPI.js"></script>
+    <!-- 导入自己的 js 文件 -->
+    <script src="assets/js/login.js"></script>
 </body>
 
 </html>
