--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 <body>
     <!-- 头部的 logo 区域 -->
     <div class="layui-main logo-box">
-        <img src="assets/images/logo.png" alt="" />
+        <img src="assets/images/logo.png" alt="" />git
     </div>
 
     <!-- 登陆注册区域 -->
